# j4lm

./: Open action items.md
COMMON/guidance/gitlab-structure/: complete-listing.md
TODO/: common-templates.md  later1.md
TODO/COMMON/TEMPLATES/j4lm-project-template/: CODEOWNERS  README.md  pyproject.toml
TODO/readies/: test.md
common/guidance/gitlab-structure/: TC4JLM gitLab structure.md  Where does this go.md
